# monopopy

./: .gitignore  MCP_USAGE.md  MCP_VERIFICATION_REPORT.md  PROMPT.md  PROMPT2.md  README.md  VERIFICATION.md  flake.nix  main.py  mcp_server.py  pyproject.toml  test_game.py  test_mcp_comprehensive.py  test_mcp_functions.py  test_mcp_server.py  test_mcp_verified.py
monopopy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
